tdf#103473: Ensure positive rectangle size

Also remove conversion of both negative scales into rotation,
because it is handled by flip; use strict comparison instead of
approximate float less because it's correct here, and also because
basegfx::fTools::less ultimately uses rtl_math_approxEqual, which
description states: attention
approxEqual( value!=0.0, 0.0 ) _never_ yields true.

Unit test included.

Reviewed-on: https://gerrit.libreoffice.org/30373
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 1c708eee636c0cdf3da2ec62849618f3262044bc)
Reviewed-on: https://gerrit.libreoffice.org/30378
(cherry picked from commit 92d0b2bc79033e8f2cd70c298ad746b38b4eea03)

Change-Id: Ia878fce360cf8aed539d95f2d4a1a3ad94379978